# scara-6dof-project

./: LICENSE  README.md  imges.py  simulation.py
final_ws/home/yuval/final_ws/: .gitignore
final_ws/home/yuval/final_ws/src/clean_ctrl/: CMakeLists.txt  package.xml
final_ws/home/yuval/final_ws/src/robot_arm_bringup/: CMakeLists.txt
final_ws/home/yuval/final_ws/src/robot_arm_bringup/launch/: robot_arm_gazebo.launch.xml
final_ws/home/yuval/final_ws/src/robot_arm_description/urdf/: common_properties.xacro
final_ws/src/robot_arm_bringup/: package.xml
final_ws/src/robot_arm_description/: CMakeLists.txt  package.xml
final_ws/src/robot_arm_description/launch/: display.launch.xml
final_ws/src/robot_arm_description/urdf/: mobile_base_fixed.xacro  robot_arm.urdf.xacro
